# Antistasi_ServerLogs

./: .gitignore  MANIFEST.IN  pyproject.toml  requirements_dev.txt
antistasi_serverlog_statistic/: __init__.py
antistasi_serverlog_statistic/filtering/: basic_overview.py  latest_date.py  parse_all_fn_performancelog.py  reading_in.py  responsibility_handler.py
antistasi_serverlog_statistic/find_log_calls/: error.txt  find_log_calls.py  test.json  test.txt
antistasi_serverlog_statistic/regex/: regex_storage.py
antistasi_serverlog_statistic/utilities/: exceptions.py  misc.py
test/: antistasi_serverlog_statistic_main_test.py
tools/: _project_devmeta.env  _project_meta.env  convert_requirements_dev_to_normal.py  create_venv.cmd  faq_data.json  log_pipe_create_venv.cmd  memory_profiling_time.cmd  memory_profiling_time__main__.cmd  profiling_to_graph.cmd  profiling_to_graph__main__.cmd  profiling_to_text.cmd  quick_pyinstaller_noconsole.bat
tools/create_venv_logs/: create_venv.errors
tools/private_quick_scripts/: archive_private_scripts.py  json_test.json  pickle_test  pickle_test.pkl  remove_old_logs.py  results.txt  rr.py
tools/scratches/: antistasi_log_synch.env  ast_scratch.py  check-ast.txt  docstring_data.json  jinja_scratch.py  make_config_diagram.py  missing_class_docstrings.txt  missing_function_docstrings.txt  missing_methods_docstrings.txt  missing_module_docstrings.txt  nextcloud_scratch.py  scratch.py  tokenize_scratch.py
tools/scratches/antistasi_logs/Testserver_1/: Testserver_1_logs.7z  arma3server_x64_2021-01-04_03-10-22.txt  arma3server_x64_2021-01-04_03-17-04.txt  arma3server_x64_2021-01-04_03-29-14.txt  arma3server_x64_2021-01-04_03-53-04.txt  arma3server_x64_2021-01-05_04-42-25.txt  (+28 more)
tools/venv_setup_settings/: required_dev.txt  required_experimental.txt  required_misc.txt
(+6 files in other folders)
