[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "antistasi_serverlog_statistic"
author = "Giddius"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires = [
	"regex"
]

[tool.flit.scripts]
parse_fn_logperformance = "antistasi_serverlog_statistic.filtering.basic_overview:run_fn_log_parser"
